--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://www.svgrepo.com/show/104319/monkey.svg"
+      href="./src/assets/images/logoBg.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Пром-альп</title>
