--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="./src/assets/images/logoNg.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Пром-альп</title>
+    <title>BossAnAlp пром-альп</title>
   </head>
   <body>
     <div id="root"></div>
