--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       sizes="32x32"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BossAnAlp пром-альп</title>
+    <title>Пром-альп в Москве</title>
   </head>
   <body>
     <div id="root"></div>
