--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="./src/assets/images/head.png"
+      href="./src/assets/images/bossAnLogo.png"
       sizes="32x32"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
